tests/samples/invalid/assignment_address_and_type_mismatch.pn
fn main() -> i32
{
	var a: u8 = 5;
	var x: &i32;
	x = &a;
	return: x
}
